Added scan import job selection
